samples/_failures_safe/1761603008_00624c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f447972.c: In function ‘main’:
./samples/SAFE/__tmp_1f447972.c:156:9: error: expected declaration or statement at end of input
  156 |         if (strlen(input_line) == 0) {
      |         ^~
./samples/SAFE/__tmp_1f447972.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f447972.c:156:9: error: expected declaration or statement at end of input
